[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = {path="../common"}
slog = "2.7.0"
amqprs = "1.5.1"
dotenv = "0.15.0"
tokio = "1.35.0"
async-std = "1.12.0"
async-trait = "0.1.75"

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
