[package]
name = "client"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Z unstable-options"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client-cli"
path = "src/main.rs"

[dependencies]
common = {path="../common"}
slog = "2.7.0"
amqprs = "1.5.1"
dotenv = "0.15.0"
tokio = "1.35.0"
async-std = "1.12.0"
async-trait = "0.1.75"
rpassword = "7.3.1"
rand_core = "0.6.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dependencies.passwords]
version = "3.1.16"
features = ["common-password"]

[dependencies.libsignify]
version = "0.6.0"
features = ['std']


[dependencies.snafu]
version = "0.8.0"
features = ['std', 'backtrace']

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
