[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
simple-error = "0.3.0"
async-trait = "0.1.75"
ring = "0.17.7"
data-encoding = "2.5.0"
futures = "0.3.30"
scopeguard = "1.2.0"

[dependencies.chrono]
version = "0.4.32"
features = ['serde', 'clock']

[dependencies.snafu]
version = "0.8.0"
features = ['std', 'backtrace']

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ['json']

[dependencies.serde]
version = "1.0"
features = ['derive']

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.diesel]
version = "2.1.0"
features = ["postgres", "uuid"]

[dependencies.diesel-derive-enum]
version = "2.1.0"
features =  ["postgres"]
